@@ -43,8 +43,12 @@ namespace tightdb {
 /// access to that table.
 class LangBindHelper {
 public:
-    /// Construct a freestanding table.
+    /// Construct a new freestanding table.
     static Table* new_table();
+
+    /// Construct a new freestanding table as a copy of the specified
+    /// one.
+    static Table* copy_table(const Table&);
 
     static Table* get_subtable_ptr(Table*, std::size_t column_ndx, std::size_t row_ndx);
     static const Table* get_subtable_ptr(const Table*, std::size_t column_ndx,
@@ -88,7 +92,16 @@ public:
 inline Table* LangBindHelper::new_table()
 {
     Allocator& alloc = Allocator::get_default();
-    const std::size_t ref = Table::create_empty_table(alloc); // Throws
+    std::size_t ref = Table::create_empty_table(alloc); // Throws
+    Table* const table = new Table(Table::RefCountTag(), alloc, ref, 0, 0); // Throws
+    table->bind_ref();
+    return table;
+}
+
+inline Table* LangBindHelper::copy_table(const Table& t)
+{
+    Allocator& alloc = Allocator::get_default();
+    std::size_t ref = t.clone(alloc); // Throws
     Table* const table = new Table(Table::RefCountTag(), alloc, ref, 0, 0); // Throws
     table->bind_ref();
     return table;
