@@ -13,6 +13,12 @@ Format:
 ==================
 
 
+2013-02-24 (Kristian Spangsege)
++ Adding copy constructors for Table and BasicTable.
++ Adding Table::copy(), BasicTable::copy() and LangBindHelper::copy_table().
++ Adding BasicTable::create() for symmetry with Table::create().
+
+
 2013-02-19 (Kristian Spangsege)
 + Type of Group::BufferSpec::m_data changed from <char*> to <const char*>.
 
